# Echo-Quill

./: README.md
backend/: .env  app.py  database.db  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  story_generator.py
backend/routers/: story.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  Loader.jsx  StoryGenertor.jsx  StoryInput.jsx  StoryOutput.jsx
